assets/css/main.css
/* ... */
@media only screen and (max-width: 1399px) {
  .hero-area .hero-text h1 {
    font-size: 105px;
  }
}
@media only screen and (max-width: 1199px) {
  .hero-area .hero-text h1 {
    font-size: 90px;
  }
}
@media only screen and (max-width: 991px) {
  .hero-area .hero-text h1 {
    font-size: 75px;
  }
}
@media only screen and (max-width: 767px) {
  .hero-area .hero-text h1 {
    font-size: 60px;
  }
}
@media only screen and (max-width: 482px) {
  .hero-area .hero-text h1 {
    font-size: 42px;
  }
}
.hero-area .hero-text h1 span {
  background: linear-gradient(87.65deg, #700000 -8.44%, #c40000 97.32%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  display: inline-block;
  opacity: 0;
  -webkit-transform: translateY(-20px);
          transform: translateY(-20px);
  -webkit-transition: opacity 1s ease-in-out, -webkit-transform 1s ease-in-out;
  transition: opacity 1s ease-in-out, -webkit-transform 1s ease-in-out;
  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
  transition: opacity 1s ease-in-out, transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
  width: 480px; /* Set a fixed width for the span */
  text-align: center;
}
@media only screen and (max-width: 1399px) {
  .hero-area .hero-text h1 span {
    width: auto;
  }
}
@media only screen and (max-width: 482px) {
  .hero-area .hero-text h1 span {
    width: 145px; /* Set a fixed width for the span */
  }
}

/*--------------------------------------------------------------
  ## stand
--------------------------------------------------------------*/
.stand {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  min-height: 100vh;
  padding: 80px 0px;
}
@media only screen and (max-width: 767px) {
  .stand {
    padding: 50px 0px;
    min-height: 50vh;
  }
}

.stand-txt {
  max-width: 900px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}
.stand-txt h2 {
  font-family: "DM Sans", sans-serif;
  font-weight: 400;
  color: #bbb;
  font-size: 47px;
  line-height: 1.3;
}
@media only screen and (max-width: 1299px) {
  .stand-txt h2 {
    font-size: 40px;
  }
}
@media only screen and (max-width: 767px) {
  .stand-txt h2 {
    font-size: 30px;
  }
}
@media only screen and (max-width: 482px) {
  .stand-txt h2 {
    font-size: 25px;
  }
}
.stand-txt h2 span {
  font-weight: 700;
  background: linear-gradient(78deg, #770000 0%, #cf0000 100%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/*--------------------------------------------------------------
  ## case
--------------------------------------------------------------*/
.case {
  padding: 80px 0px;
}
@media only screen and (max-width: 767px) {
  .case {
    padding: 50px 0px;
  }
}
.case .sec-t {
  text-align: center;
  max-width: 500px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 70px;
}
@media only screen and (max-width: 1199px) {
  .case .sec-t {
    margin-bottom: 60px;
  }
}
@media only screen and (max-width: 991px) {
  .case .sec-t {
    margin-bottom: 50px;
  }
}
@media only screen and (max-width: 767px) {
  .case .sec-t {
    margin-bottom: 40px;
  }
}
.case .sec-t h2 {
  font-family: "Outfit", sans-serif;
  font-weight: 600;
  font-size: 70px;
  color: #b20000;
  letter-spacing: 1.2px;
  margin-bottom: 16px;
}
@media only screen and (max-width: 1199px) {
  .case .sec-t h2 {
    font-size: 60px;
  }
}
@media only screen and (max-width: 991px) {
  .case .sec-t h2 {
    font-size: 45px;
  }
}
@media only screen and (max-width: 767px) {
  .case .sec-t h2 {
    font-size: 40px;
    margin-bottom: 10px;
  }
}
@media only screen and (max-width: 767px) {
  .case .sec-t h2 {
    font-size: 33px;
  }
}
.case .sec-t p {
  color: #bbb;
  font-size: 19px;
  font-style: normal;
  font-weight: 700;
  padding: 0px 10px;
  margin-bottom: 22px;
}
@media only screen and (max-width: 767px) {
  .case .sec-t p {
    font-size: 16px;
    font-weight: 600;
  }
}

.case-single {
  background: #fff6e8;
  -webkit-box-shadow: 0px 0px 56.891px 0px rgba(0, 0, 0, 0.25);
          box-shadow: 0px 0px 56.891px 0px rgba(0, 0, 0, 0.25);
  padding: 80px 30px 30px 30px;
  text-align: center;
  height: 100%;
  text-align: center;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}
@media only screen and (max-width: 1199px) {
  .case-single {
    padding: 60px 30px 30px 30px;
  }
}
@media only screen and (max-width: 767px) {
  .case-single {
    padding: 40px 23px 23px 23px;
  }
}
.case-single .case-img {
  height: 165px;
  -o-object-fit: contain;
     object-fit: contain;
  margin-bottom: 50px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}
@media only screen and (max-width: 1199px) {
  .case-single .case-img {
    height: 140px;
  }
}
@media only screen and (max-width: 991px) {
  .case-single .case-img {
    margin-bottom: 35px;
  }
}
@media only screen and (max-width: 767px) {
  .case-single .case-img {
    height: 130px;
  }
}
.case-single h3 {
  font-family: "Outfit", sans-serif;
  font-size: 26px;
  font-style: normal;
  font-weight: 600;
  color: #777;
  margin-bottom: 24px;
}
@media only screen and (max-width: 991px) {
  .case-single h3 {
    font-size: 22px;
    margin-bottom: 18px;
  }
}
.case-single p {
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  color: #bbb;
}
@media only screen and (max-width: 767px) {
  .case-single p {
    font-size: 15px;
    font-weight: 500;
  }
}
.case-single:hover .case-img {
  -webkit-animation: shake 0.5s ease-in-out infinite;
          animation: shake 0.5s ease-in-out infinite;
}
/* ... */

